Toevoegen als param

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a77b9825",
+   "id": "c1858277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +65,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31413553",
+   "id": "8d3724fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO parse_polygons moeten we als CSV opslaan\n",
+    "offset_meter = -0.3\n",
     "joined_road_polygons = []\n",
     "for layer in [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\"]:\n",
     "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
-    "    road_polygons = parse_polygons(json_content)\n",
+    "    road_polygons = parse_polygons(json_content, offset_meter)\n",
     "    joined_road_polygons += road_polygons"
    ]
   },
@@ -98,16 +99,6 @@
     "    avg_ground_height = np.average(pointcloud.z[road_ground_mask])\n",
     "    max_z_thresh = avg_ground_height + m_above_ground\n",
     "    print(max_z_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2663dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "road_mask"
    ]
   },
   {
@@ -140,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c80796e9",
+   "id": "7cb6eb24",
    "metadata": {},
    "outputs": [],
    "source": []
