--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -10,12 +10,12 @@
     "# Add project src to path.\n",
     "import set_path\n",
     "\n",
+    "# Import modules.\n",
     "import numpy as np\n",
     "\n",
     "from src.utils.labels import Labels\n",
     "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
     "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file\n",
-    "from src.utils.clip_utils import poly_clip\n",
     "from src.region_growing.label_connected_comp import LabelConnectedComp"
    ]
   },
@@ -26,8 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select the file to process.\n",
     "in_file = '../datasets/pointcloud/grown_2397_9705.las'\n",
-    "out_file = '../datasets/pointcloud/cars_2397_9705.las'"
+    "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
+    "ahn_data_file = '../datasets/ahn/ahn_2397_9705.npz'"
    ]
   },
   {
@@ -45,6 +47,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "499312e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.ahn_utils import load_ahn_tile\n",
+    "ahn_tile = load_ahn_tile(ahn_data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "89a24ba1",
    "metadata": {},
    "outputs": [],
@@ -55,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1858277",
+   "id": "5519acf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,57 +78,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d3724fc",
+   "id": "6fad302c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO parse_polygons moeten we als CSV opslaan\n",
-    "offset_meter = -0.3\n",
-    "joined_road_polygons = []\n",
+    "bgt_road_polygons = []\n",
     "for layer in [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\"]:\n",
     "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
-    "    road_polygons = parse_polygons(json_content, offset_meter)\n",
-    "    joined_road_polygons += road_polygons"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c29a6fcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m_above_ground = 3\n",
-    "\n",
-    "# TODO dit gaat alleen werken voor een tegel met weinig heuvels\n",
-    "avg_ground_height = np.average(pointcloud.z[las_labels == Labels.GROUND])\n",
-    "max_z_thresh = avg_ground_height + m_above_ground\n",
-    "print(max_z_thresh)\n",
-    "\n",
-    "# TODO Daarom miss beter het gemiddelde van een stukje road berekenen.\n",
-    "if joined_road_polygons:\n",
-    "    road_mask = poly_clip(points, joined_road_polygons[0]) # Take one polygon\n",
-    "    road_ground_mask = np.logical_and(las_labels == Labels.GROUND,road_mask)\n",
-    "    avg_ground_height = np.average(pointcloud.z[road_ground_mask])\n",
-    "    max_z_thresh = avg_ground_height + m_above_ground\n",
-    "    print(max_z_thresh)"
+    "    road_polygons, _ = parse_polygons(json_content, offset_meter=-0.3)\n",
+    "    bgt_road_polygons += road_polygons"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "48b39c75",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "m_above_ground = 3\n",
+    "\n",
     "# TODO dit verwerken in de pipeline?\n",
     "lcc = LabelConnectedComp(Labels.CAR, exclude_labels, octree_level=10,\n",
     "                         min_component_size=100)\n",
     "lcc._set_mask(las_labels)\n",
     "lcc._convert_input_cloud(points)\n",
     "lcc._label_connected_comp()\n",
-    "las_labels = lcc._overlapping_polygons(joined_road_polygons, max_z_thresh, \n",
-    "                                       min_area_thresh=6, max_area_thresh=16)"
+    "las_labels = lcc._fill_car_like_components(bgt_road_polygons, m_above_ground, ahn_tile,\n",
+    "                                           min_area_thresh=6, max_area_thresh=16)"
    ]
   },
   {
@@ -131,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb6eb24",
+   "id": "6b88072b",
    "metadata": {},
    "outputs": [],
    "source": []
