Ook notebook 2 aangepast

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -33,6 +33,7 @@
     "from src.pipeline import Pipeline\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.csv_utils as csv_utils\n",
     "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
     "from src.utils.labels import Labels"
    ]
@@ -130,7 +131,6 @@
    "outputs": [],
    "source": [
     "# Data folder and file for the BGT fuser.\n",
-    "bgt_data_folder = '../datasets/bgt/'\n",
     "bgt_data_file = '../datasets/bgt/bgt_buildings.csv'\n",
     "\n",
     "# Specify the bounding box of the area we want to scrape.\n",
@@ -141,7 +141,10 @@
     "json_response = ams_bgt_scraper.scrape_amsterdam_bgt('BGT_PND_pand', bbox=bbox_padded)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "ams_bgt_scraper.parse_buildings(json_response, out_folder=bgt_data_folder)"
+    "parsed_content, csv_headers = ams_bgt_scraper.parse_buildings(json_response, prepare_csv=True)\n",
+    "\n",
+    "# Write the csv\n",
+    "csv_utils.write_csv(bgt_data_file, parsed_content, csv_headers)"
    ]
   },
   {
@@ -267,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
