--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "499312e8",
+   "id": "b94d3878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,14 @@
    },
    "outputs": [],
    "source": [
-    "m_above_ground = 3\n",
-    "\n",
     "# TODO dit verwerken in de pipeline?\n",
     "lcc = LabelConnectedComp(Labels.CAR, exclude_labels, octree_level=10,\n",
-    "                         min_component_size=100)\n",
+    "                         min_component_size=100, max_above_ground=3,\n",
+    "                         min_area_thresh=6, max_area_thresh=16)\n",
     "lcc._set_mask(las_labels)\n",
     "lcc._convert_input_cloud(points)\n",
     "lcc._label_connected_comp()\n",
-    "las_labels = lcc._fill_car_like_components(bgt_road_polygons, m_above_ground, ahn_tile,\n",
-    "                                           min_area_thresh=6, max_area_thresh=16)"
+    "las_labels = lcc._fill_car_like_components(bgt_road_polygons, ahn_tile)"
    ]
   },
   {
