Update 4. Label cars.ipynb

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -14,9 +14,21 @@
     "import numpy as np\n",
     "\n",
     "from src.utils.labels import Labels\n",
-    "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
     "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file\n",
+    "from src.utils.ahn_utils import load_ahn_tile\n",
+    "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
     "from src.region_growing.label_connected_comp import LabelConnectedComp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a24ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The already labelled ground and building points must be removed.\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING)"
    ]
   },
   {
@@ -29,40 +41,14 @@
     "# Select the file to process.\n",
     "in_file = '../datasets/pointcloud/grown_2397_9705.las'\n",
     "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
-    "ahn_data_file = '../datasets/ahn/ahn_2397_9705.npz'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbd66c9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ahn_data_file = '../datasets/ahn/ahn_2397_9705.npz'\n",
+    "\n",
+    "# Read the point cloud\n",
     "pointcloud = read_las(in_file)\n",
-    "las_labels = pointcloud.label\n",
-    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b94d3878",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils.ahn_utils import load_ahn_tile\n",
+    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
+    "\n",
+    "# Read the AHN tile\n",
     "ahn_tile = load_ahn_tile(ahn_data_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89a24ba1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING)"
    ]
   },
   {
@@ -72,16 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbox = get_bbox_from_las_file(in_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fad302c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Specify the bounding box of the area we want to scrape.\n",
+    "bbox = get_bbox_from_las_file(in_file)\n",
+    "\n",
+    "# Scrape data from the Amsterdam WFS and parse the json.\n",
     "bgt_road_polygons = []\n",
     "for layer in [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\"]:\n",
     "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
@@ -102,7 +82,7 @@
     "lcc = LabelConnectedComp(Labels.CAR, exclude_labels, octree_level=10,\n",
     "                         min_component_size=100, max_above_ground=3,\n",
     "                         min_area_thresh=6, max_area_thresh=16)\n",
-    "lcc._set_mask(las_labels)\n",
+    "lcc._set_mask(pointcloud.label)\n",
     "lcc._convert_input_cloud(points)\n",
     "lcc._label_connected_comp()\n",
     "las_labels = lcc._fill_car_like_components(bgt_road_polygons, ahn_tile)"
