Check dims of mbr

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -81,7 +81,8 @@
     "# TODO dit verwerken in de pipeline?\n",
     "lcc = LabelConnectedComp(Labels.CAR, exclude_labels, octree_level=10,\n",
     "                         min_component_size=100, max_above_ground=3,\n",
-    "                         min_area_thresh=6, max_area_thresh=16)\n",
+    "                         min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                         min_length_thresh=2.0, max_length_thresh=7.0)\n",
     "lcc._set_mask(pointcloud.label)\n",
     "lcc._convert_input_cloud(points)\n",
     "lcc._label_connected_comp()\n",
