--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/grown_2397_9705.las'\n",
-    "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
+    "in_file = '../datasets/pointcloud/grown_2397_9705.laz'\n",
+    "out_file = '../datasets/pointcloud/cars_2397_9705.laz'\n",
     "ahn_data_file = '../datasets/ahn/ahn_2397_9705.npz'\n",
     "\n",
     "# Read the point cloud\n",
