--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -63,7 +63,10 @@
     "\n",
     "# Scrape data from the Amsterdam WFS and parse the json.\n",
     "bgt_road_polygons = []\n",
-    "for layer in [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\"]:\n",
+    "bgt_layers = [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\",\n",
+    "             \"BGT_WGL_rijbaan_autoweg\", \"BGT_WGL_rijbaan_autosnelweg\",\n",
+    "             \"BGT_WGL_rijbaan_regionale_weg\"] # \"BGT_WGL_woonerf\",\n",
+    "for layer in bgt_layers:\n",
     "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    road_polygons, _ = parse_polygons(json_content, offset_meter=-0.3)\n",
     "    bgt_road_polygons += road_polygons"
