Add car fuser class

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -17,7 +17,7 @@
     "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file\n",
     "from src.utils.ahn_utils import load_ahn_tile\n",
     "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
-    "from src.region_growing.label_connected_comp import LabelConnectedComp"
+    "import src.fusion as fusion # TODO of from src.fusion.car_fuser import CarFuser"
    ]
   },
   {
@@ -48,24 +48,28 @@
     "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
     "\n",
     "# Read the AHN tile\n",
-    "ahn_tile = load_ahn_tile(ahn_data_file)"
+    "ahn_tile = load_ahn_tile(ahn_data_file) # TODO replace?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5519acf0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Specify the bounding box of the area we want to scrape.\n",
     "bbox = get_bbox_from_las_file(in_file)\n",
     "\n",
-    "# Scrape data from the Amsterdam WFS and parse the json.\n",
-    "bgt_road_polygons = []\n",
+    "# Road parking spots layers in BGT\n",
     "bgt_layers = [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\",\n",
     "             \"BGT_WGL_rijbaan_autoweg\", \"BGT_WGL_rijbaan_autosnelweg\",\n",
-    "             \"BGT_WGL_rijbaan_regionale_weg\"] # \"BGT_WGL_woonerf\",\n",
+    "             \"BGT_WGL_rijbaan_regionale_weg\"]\n",
+    "\n",
+    "# Scrape data from the Amsterdam WFS and parse the json.\n",
+    "bgt_road_polygons = []\n",
     "for layer in bgt_layers:\n",
     "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    road_polygons, _ = parse_polygons(json_content, offset_meter=-0.3)\n",
@@ -81,15 +85,20 @@
    },
    "outputs": [],
    "source": [
-    "# TODO dit verwerken in de pipeline?\n",
-    "lcc = LabelConnectedComp(Labels.CAR, exclude_labels, octree_level=10,\n",
+    "car_fuser = fusion.CarFuser(Labels.CAR, exclude_labels, octree_level=10,\n",
     "                         min_component_size=100, max_above_ground=3,\n",
     "                         min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                         min_length_thresh=2.0, max_length_thresh=7.0)\n",
-    "lcc._set_mask(pointcloud.label)\n",
-    "lcc._convert_input_cloud(points)\n",
-    "lcc._label_connected_comp()\n",
-    "las_labels = lcc._fill_car_like_components(bgt_road_polygons, ahn_tile)"
+    "                         min_length_thresh=2.0, max_length_thresh=7.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abaf7524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "las_labels = car_fuser.get_label_mask(points, pointcloud.label, ahn_tile, bgt_road_polygons)"
    ]
   },
   {
