Update 4. Label cars.ipynb

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -14,8 +14,7 @@
     "import numpy as np\n",
     "\n",
     "from src.utils.labels import Labels\n",
-    "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file\n",
-    "from src.utils.ahn_utils import load_ahn_tile\n",
+    "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file, get_tilecode_from_filename\n",
     "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
     "import src.fusion as fusion # TODO of from src.fusion.car_fuser import CarFuser"
    ]
@@ -39,16 +38,16 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/grown_2397_9705.laz'\n",
-    "out_file = '../datasets/pointcloud/cars_2397_9705.laz'\n",
-    "ahn_data_file = '../datasets/ahn/ahn_2397_9705.npz'\n",
+    "in_file = '../datasets/pointcloud/grown_2397_9705.las'\n",
+    "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
+    "\n",
+    "# Data folder for the fusers.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
     "\n",
     "# Read the point cloud\n",
+    "tilecode = get_tilecode_from_filename(in_file)\n",
     "pointcloud = read_las(in_file)\n",
-    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
-    "\n",
-    "# Read the AHN tile\n",
-    "ahn_tile = load_ahn_tile(ahn_data_file) # TODO replace?"
+    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T"
    ]
   },
   {
@@ -85,20 +84,21 @@
    },
    "outputs": [],
    "source": [
-    "car_fuser = fusion.CarFuser(Labels.CAR, exclude_labels, octree_level=10,\n",
-    "                         min_component_size=100, max_above_ground=3,\n",
-    "                         min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                         min_length_thresh=2.0, max_length_thresh=7.0)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
+    "                            octree_level=10, min_component_size=100,\n",
+    "                            max_above_ground=3, min_width_thresh=1.5,\n",
+    "                            max_width_thresh=2.55, min_length_thresh=2.0,\n",
+    "                            max_length_thresh=7.0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abaf7524",
+   "id": "a5895347",
    "metadata": {},
    "outputs": [],
    "source": [
-    "las_labels = car_fuser.get_label_mask(points, pointcloud.label, ahn_tile, bgt_road_polygons)"
+    "las_labels = car_fuser.get_label_mask(tilecode, points, pointcloud.label, bgt_road_polygons)"
    ]
   },
   {
