--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -16,7 +16,7 @@
     "from src.utils.labels import Labels\n",
     "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file, get_tilecode_from_filename\n",
     "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
-    "import src.fusion as fusion # TODO of from src.fusion.car_fuser import CarFuser"
+    "from src.fusion.car_fuser import CarFuser"
    ]
   },
   {
@@ -70,9 +70,12 @@
     "# Scrape data from the Amsterdam WFS and parse the json.\n",
     "bgt_road_polygons = []\n",
     "for layer in bgt_layers:\n",
+    "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
     "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
-    "    road_polygons, _ = parse_polygons(json_content, offset_meter=-0.3)\n",
-    "    bgt_road_polygons += road_polygons"
+    "    \n",
+    "    # Parse the downloaded json response.\n",
+    "    parsed_content, _ = parse_polygons(json_content, offset_meter=-0.3)\n",
+    "    bgt_road_polygons += parsed_content"
    ]
   },
   {
@@ -84,21 +87,22 @@
    },
    "outputs": [],
    "source": [
-    "car_fuser = fusion.CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
-    "                            octree_level=10, min_component_size=100,\n",
-    "                            max_above_ground=3, min_width_thresh=1.5,\n",
-    "                            max_width_thresh=2.55, min_length_thresh=2.0,\n",
-    "                            max_length_thresh=7.0)"
+    "car_fuser = CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
+    "                     bgt_road_polygons=bgt_road_polygons, \n",
+    "                     octree_level=10, min_component_size=100,\n",
+    "                     max_above_ground=3, min_width_thresh=1.5,\n",
+    "                     max_width_thresh=2.55, min_length_thresh=2.0,\n",
+    "                     max_length_thresh=7.0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5895347",
+   "id": "db4b85ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "las_labels = car_fuser.get_label_mask(tilecode, points, pointcloud.label, bgt_road_polygons)"
+    "las_labels = car_fuser.get_label_mask(tilecode, points, pointcloud.label)"
    ]
   },
   {
@@ -114,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b88072b",
+   "id": "f41fb3fe",
    "metadata": {},
    "outputs": [],
    "source": []
