In pipeline verwerkt

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -12,11 +12,21 @@
     "\n",
     "# Import modules.\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "from src.utils.labels import Labels\n",
     "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file, get_tilecode_from_filename\n",
     "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
+    "from src.pipeline import Pipeline\n",
     "from src.fusion.car_fuser import CarFuser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a7be56c",
+   "metadata": {},
+   "source": [
+    "## Car fuser based on cluster dimensions and BGT information\n"
    ]
   },
   {
@@ -42,12 +52,7 @@
     "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
     "\n",
     "# Data folder for the fusers.\n",
-    "ahn_data_folder = '../datasets/ahn/'\n",
-    "\n",
-    "# Read the point cloud\n",
-    "tilecode = get_tilecode_from_filename(in_file)\n",
-    "pointcloud = read_las(in_file)\n",
-    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T"
+    "ahn_data_folder = '../datasets/ahn/'"
    ]
   },
   {
@@ -87,6 +92,7 @@
    },
    "outputs": [],
    "source": [
+    "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
     "                     bgt_road_polygons=bgt_road_polygons, \n",
     "                     octree_level=10, min_component_size=100,\n",
@@ -96,23 +102,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db4b85ab",
+   "cell_type": "markdown",
+   "id": "a50f4246",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "las_labels = car_fuser.get_label_mask(tilecode, points, pointcloud.label)"
+    "## Process point clouds and save the results\n",
+    "The pipeline can now be used to process point clouds. Labels will be written to the LAS file as a new extended field called label."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "202a7ddb",
+   "id": "f1d53953",
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_and_save_las(pointcloud, las_labels, out_file)"
+    "# Set-up label cars pipeline.\n",
+    "fusers = (car_fuser,)\n",
+    "pipeline = Pipeline(fusers=fusers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02ddb831",
+   "metadata": {},
+   "source": [
+    "## Process a single file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4694f032",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process the file.\n",
+    "start = time.time()\n",
+    "pipeline.process_file(in_file, out_file=out_file)\n",
+    "end = time.time()\n",
+    "print(f'Tile labelled in {end-start:.2f} seconds.')"
    ]
   },
   {
