Toch de file saven

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -98,6 +98,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "secret-packaging",
+   "metadata": {},
+   "source": [
+    "## Label car like objects\n",
+    "Now, we divide the leftover points in clusters and determine car like objects. \n",
+    "\n",
+    "For details, installation instructions and more options, see [4. Label cars](4.%20Label%20cars.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intense-summit",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# File with road information from BGT.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
+    "\n",
+    "# The already labelled ground and building points must be removed.\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING)\n",
+    "# Car fuser using a clustering algorithm and BGT road data.\n",
+    "car_fuser = CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
+    "                     bgt_file=bgt_file, octree_level=10,\n",
+    "                     min_component_size=100, max_above_ground=3,\n",
+    "                     min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                     min_length_thresh=2.0, max_length_thresh=7.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "collaborative-durham",
    "metadata": {},
    "source": [
@@ -112,9 +143,8 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "growers = (building_grower,)\n",
-    "pipeline = Pipeline(fusers, growers)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower)\n",
+    "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
     "# Process the file.\n",
