--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -15,15 +15,16 @@
     "import time\n",
     "\n",
     "from src.utils.labels import Labels\n",
-    "from src.utils.las_utils import read_las, label_and_save_las, get_bbox_from_las_file, get_tilecode_from_filename\n",
-    "from src.scrapers.ams_bgt_scraper import scrape_amsterdam_bgt, parse_polygons\n",
+    "import src.utils.las_utils as las_utils\n",
+    "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
+    "from src.utils.csv_utils import write_csv\n",
     "from src.pipeline import Pipeline\n",
     "from src.fusion.car_fuser import CarFuser"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6a7be56c",
+   "id": "bdbe7291",
    "metadata": {},
    "source": [
     "## Car fuser based on cluster dimensions and BGT information\n"
@@ -52,7 +53,8 @@
     "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
     "\n",
     "# Data folder for the fusers.\n",
-    "ahn_data_folder = '../datasets/ahn/'"
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "pc_data_folder = '../datasets/pointcloud/'"
    ]
   },
   {
@@ -65,22 +67,36 @@
    "outputs": [],
    "source": [
     "# Specify the bounding box of the area we want to scrape.\n",
-    "bbox = get_bbox_from_las_file(in_file)\n",
+    "bbox_padded = las_utils.get_bbox_from_las_folder(pc_data_folder, padding=10)\n",
     "\n",
     "# Road parking spots layers in BGT\n",
     "bgt_layers = [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\",\n",
     "             \"BGT_WGL_rijbaan_autoweg\", \"BGT_WGL_rijbaan_autosnelweg\",\n",
-    "             \"BGT_WGL_rijbaan_regionale_weg\"]\n",
-    "\n",
+    "             \"BGT_WGL_rijbaan_regionale_weg\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1eb025",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Scrape data from the Amsterdam WFS and parse the json.\n",
-    "bgt_road_polygons = []\n",
+    "bgt_road_polygons_csv = []\n",
     "for layer in bgt_layers:\n",
     "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
-    "    json_content = scrape_amsterdam_bgt(layer, bbox=bbox)\n",
+    "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox_padded)\n",
     "    \n",
     "    # Parse the downloaded json response.\n",
-    "    parsed_content, _ = parse_polygons(json_content, offset_meter=-0.3)\n",
-    "    bgt_road_polygons += parsed_content"
+    "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content,\n",
+    "                                                                 offset_meter=-0.3, \n",
+    "                                                                 prepare_csv=True)\n",
+    "    bgt_road_polygons_csv += parsed_content\n",
+    "\n",
+    "# Write the csv\n",
+    "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
+    "write_csv(bgt_data_file, bgt_road_polygons_csv, csv_headers)"
    ]
   },
   {
@@ -94,16 +110,15 @@
    "source": [
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
-    "                     bgt_road_polygons=bgt_road_polygons, \n",
-    "                     octree_level=10, min_component_size=100,\n",
-    "                     max_above_ground=3, min_width_thresh=1.5,\n",
-    "                     max_width_thresh=2.55, min_length_thresh=2.0,\n",
-    "                     max_length_thresh=7.0)"
+    "                     bgt_file=bgt_data_file, octree_level=10,\n",
+    "                     min_component_size=100, max_above_ground=3,\n",
+    "                     min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                     min_length_thresh=2.0, max_length_thresh=7.0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a50f4246",
+   "id": "6b96cd6f",
    "metadata": {},
    "source": [
     "## Process point clouds and save the results\n",
@@ -113,18 +128,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1d53953",
+   "id": "e9c5e2ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set-up label cars pipeline.\n",
-    "fusers = (car_fuser,)\n",
-    "pipeline = Pipeline(fusers=fusers)"
+    "# Set-up the order in how we want to label.\n",
+    "process_sequence = (car_fuser,)\n",
+    "pipeline = Pipeline(process_sequence=process_sequence)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02ddb831",
+   "id": "a38e12ad",
    "metadata": {},
    "source": [
     "## Process a single file"
@@ -133,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4694f032",
+   "id": "448516f0",
    "metadata": {},
    "outputs": [],
    "source": [
