--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# Specify the bounding box of the area we want to scrape.\n",
-    "bbox_padded = las_utils.get_bbox_from_las_folder(pc_data_folder, padding=10)\n",
+    "bbox = las_utils.get_bbox_from_las_folder(pc_data_folder)\n",
     "\n",
     "# Road parking spots layers in BGT\n",
     "bgt_layers = [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\",\n",
@@ -86,7 +86,7 @@
     "bgt_road_polygons_csv = []\n",
     "for layer in bgt_layers:\n",
     "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
-    "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox_padded)\n",
+    "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
     "    \n",
     "    # Parse the downloaded json response.\n",
     "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content,\n",
