Working solution for tile 2386_9702.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
     "from src.pipeline import Pipeline\n",
     "from src.utils.labels import Labels"
    ]
@@ -37,8 +38,10 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "out_file = '../datasets/pointcloud/complete_2386_9702.laz'"
+    "tile_code = '2386_9702'\n",
+    "\n",
+    "in_file = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
+    "out_file = '../datasets/pointcloud/complete_' + tile_code + '.laz'"
    ]
   },
   {
@@ -117,14 +120,16 @@
     "# File with road information from BGT.\n",
     "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
     "\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "\n",
     "# The already labelled ground and building points must be removed.\n",
     "exclude_labels = (Labels.GROUND, Labels.BUILDING)\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
-    "                     bgt_file=bgt_file, octree_level=10,\n",
-    "                     min_component_size=100, max_above_ground=3,\n",
-    "                     min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                     min_length_thresh=2.0, max_length_thresh=7.0)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
+    "                         bgt_file=bgt_data_file, octree_level=10,\n",
+    "                         min_component_size=100, max_above_ground=3,\n",
+    "                         min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                         min_length_thresh=2.0, max_length_thresh=7.0)"
    ]
   },
   {
@@ -143,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower)\n",
+    "process_sequence = (npz_ground_fuser, npz_building_fuser, building_grower, car_fuser)\n",
     "pipeline = Pipeline(process_sequence)\n",
     "\n",
     "start = time.time()\n",
@@ -191,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
