--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -18,8 +18,9 @@
     "import src.utils.las_utils as las_utils\n",
     "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
     "from src.utils.csv_utils import write_csv\n",
-    "from src.pipeline import Pipeline\n",
-    "from src.fusion.car_fuser import CarFuser"
+    "from src.utils.ahn_utils import NPZReader\n",
+    "from src.fusion.car_fuser import CarFuser\n",
+    "from src.pipeline import Pipeline"
    ]
   },
   {
@@ -49,8 +50,8 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/grown_2397_9705.las'\n",
-    "out_file = '../datasets/pointcloud/cars_2397_9705.las'\n",
+    "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
+    "out_file = '../datasets/pointcloud/cars_2386_9702.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
@@ -108,8 +109,11 @@
    },
    "outputs": [],
    "source": [
+    "# Read NPZ file\n",
+    "ahn_reader = NPZReader(ahn_data_folder)\n",
+    "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = CarFuser(Labels.CAR, exclude_labels, ahn_data_folder, \n",
+    "car_fuser = CarFuser(Labels.CAR, ahn_reader, \n",
     "                     bgt_file=bgt_data_file, octree_level=10,\n",
     "                     min_component_size=100, max_above_ground=3,\n",
     "                     min_width_thresh=1.5, max_width_thresh=2.55,\n",
@@ -154,7 +158,7 @@
    "source": [
     "# Process the file.\n",
     "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file)\n",
+    "pipeline.process_file(in_file, out_file=out_file, exclude_labels=exclude_labels)\n",
     "end = time.time()\n",
     "print(f'Tile labelled in {end-start:.2f} seconds.')"
    ]
