--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -107,7 +107,7 @@
     "## Label car like objects\n",
     "Now, we divide the leftover points in clusters and determine car like objects. \n",
     "\n",
-    "For details, installation instructions and more options, see [4. Label cars](4.%20Label%20cars.ipynb)."
+    "For details and on how to generate the BGT road csv file, see [4. Label cars](4.%20Label%20cars.ipynb)."
    ]
   },
   {
