Moved 'exclude_labels" to Pipeline constructor. Small changes in notebook imports.

--- a/notebooks/4. Label cars.ipynb
+++ b/notebooks/4. Label cars.ipynb
@@ -14,12 +14,12 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
-    "from src.utils.labels import Labels\n",
     "import src.utils.las_utils as las_utils\n",
     "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
-    "from src.utils.csv_utils import write_csv\n",
-    "from src.utils.ahn_utils import NPZReader\n",
-    "from src.fusion.car_fuser import CarFuser\n",
+    "import src.utils.csv_utils as csv_utils\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.fusion as fusion\n",
+    "from src.utils.labels import Labels\n",
     "from src.pipeline import Pipeline"
    ]
   },
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
+    "in_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
     "out_file = '../datasets/pointcloud/cars_2386_9702.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
@@ -62,9 +62,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5519acf0",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Specify the bounding box of the area we want to scrape.\n",
@@ -97,7 +95,7 @@
     "\n",
     "# Write the csv\n",
     "bgt_data_file = '../datasets/bgt/bgt_roads.csv'\n",
-    "write_csv(bgt_data_file, bgt_road_polygons_csv, csv_headers)"
+    "csv_utils.write_csv(bgt_data_file, bgt_road_polygons_csv, csv_headers)"
    ]
   },
   {
@@ -110,14 +108,14 @@
    "outputs": [],
    "source": [
     "# Read NPZ file\n",
-    "ahn_reader = NPZReader(ahn_data_folder)\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = CarFuser(Labels.CAR, ahn_reader, \n",
-    "                     bgt_file=bgt_data_file, octree_level=10,\n",
-    "                     min_component_size=100, max_above_ground=3,\n",
-    "                     min_width_thresh=1.5, max_width_thresh=2.55,\n",
-    "                     min_length_thresh=2.0, max_length_thresh=7.0)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, \n",
+    "                            bgt_file=bgt_data_file, octree_level=10,\n",
+    "                            min_component_size=100, max_above_ground=3,\n",
+    "                            min_width_thresh=1.5, max_width_thresh=2.55,\n",
+    "                            min_length_thresh=2.0, max_length_thresh=7.0)"
    ]
   },
   {
@@ -138,7 +136,7 @@
    "source": [
     "# Set-up the order in how we want to label.\n",
     "process_sequence = (car_fuser,)\n",
-    "pipeline = Pipeline(process_sequence=process_sequence)"
+    "pipeline = Pipeline(process_sequence=process_sequence, exclude_labels=exclude_labels)"
    ]
   },
   {
@@ -158,7 +156,7 @@
    "source": [
     "# Process the file.\n",
     "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file, exclude_labels=exclude_labels)\n",
+    "pipeline.process_file(in_file, out_file=out_file)\n",
     "end = time.time()\n",
     "print(f'Tile labelled in {end-start:.2f} seconds.')"
    ]
@@ -188,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
